@@ -87,14 +87,14 @@ class DashBoard (Plugin, gtk.VBox):
         self._setup_gauges()
         self._set_gauges_background()
         
-        self._obd_cbs.append(app.obd.connect('connected', self._obd_connected_cb))
+        self._obd_cbs.append(app.device.connect('connected', self._obd_connected_cb))
         self._notebook_cbs.append(app.notebook.connect('switch-page', 
                                                 self._notebook_page_change_cb))
 
         self._scheduler_cbs.append(self.app.scheduler.connect('notify::working', 
                                              self._scheduler_notify_working_cb))        
 
-        self._obd_connected_cb(app.obd)
+        self._obd_connected_cb(app.device)
 
     def _prefs_notify_color_cb(self, pname, pvalue, ptype, args):
         if pname == 'dashboard.needle-color':
@@ -192,7 +192,7 @@ class DashBoard (Plugin, gtk.VBox):
     def _update_supported_gauges (self):
         
         for gauge in self.gauges:
-            if gauge.sensor.pid in self.app.obd.supported_pids:
+            if gauge.sensor.pid in self.app.device.supported_pids:
                 gauge.supported = True
                 gauge.active = True
             else:
@@ -235,7 +235,7 @@ class DashBoard (Plugin, gtk.VBox):
         for cb_id in self._scheduler_cbs:
             self.app.scheduler.disconnect(cb_id)
         for cb_id in self._obd_cbs:
-            self.app.obd.disconnect(cb_id)
+            self.app.device.disconnect(cb_id)
         
 
 
